# familiar

./: .env.example  .gitignore  CLAUDE.md  README.md  config.default.toml  pyproject.toml
docs/superpowers/plans/: 2026-03-29-familiar-new-tools.md
docs/superpowers/specs/: 2026-03-27-ten-new-tools-design.md
familiar/: __init__.py  agent.py  cli.py
familiar/tools/: __init__.py  seer_tools.py
src/familiar/: agent.py  cli.py  config.py  memory.py  utils.py
src/familiar/tools/: __init__.py  advisor_tools.py  memory_tools.py  pentest_tools.py  security_tools.py  seer_tools.py  tome_tools.py
tests/: conftest.py  test_advisor_helpers.py  test_advisor_tools.py  test_agent_config.py  test_bulk_availability_wrapper.py  test_cli_handlers.py  test_cli_helpers.py  test_days_until.py  test_dns_zone_security.py  test_domain_analysis.py  test_email_security_audit.py  test_epp_classification.py  test_exposure_report.py  test_extract_registration.py  test_http_security.py  test_infrastructure_recon.py  test_memory_notebook.py  test_memory_snapshots.py  test_memory_tags_prefs.py  test_memory_tool_wrappers.py  test_memory_watchlist.py  test_parallel_calls.py  test_pentest_helpers.py  test_remaining_wrappers.py  test_safe_call.py  test_security_tools.py  test_seer_tool_wrappers.py  test_snapshot_tool_wrappers.py  test_ssl_deep_accuracy.py  test_ssl_detection_probe.py  test_tome_record_by_status.py  test_tome_tool_wrappers.py  test_tool_inventory.py
